@@ -43,6 +43,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 - bug #2823996 [data] Cannot edit row with no PK and a BIT field 
 - bug [export] Exporting results of a query which contains a LIMIT clause
   inside a subquery
+- bug #2837722 [export] Run complex SQL then export does not work 
 
 3.2.1.0 (2009-08-09)
 - bug #2799009 Login with ipv6 IP address breaks redirect
